--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,18 @@ body {
   background: var(--tg-theme-bg-color);
   color: var(--tg-theme-text-color);
 }
+
+.closeBtn{
+  position: absolute;
+  padding: 5px 10px;
+
+  border: 1;
+  border-radius: 15px;
+  background-color: var(--tg-theme-button-color);
+
+  bottom: 10px;
+  left: 45%;
+  transform: translate(-50% -50%);
+
+  font-size: 20px;
+}
