--- a/src/App.css
+++ b/src/App.css
@@ -10,16 +10,23 @@ body {
 }
 
 .closeBtn{
-  position: absolute;
   padding: 5px 10px;
 
   border: 1;
   border-radius: 15px;
   background-color: var(--tg-theme-button-color);
 
-  bottom: 10px;
-  left: 45%;
+
+  position: absolute;
+  bottom: 20px;
+  left:35%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   transform: translate(-50% -50%);
+  width: 10%;
+  min-height: 50px;
+  min-width: 100px;
 
   font-size: 20px;
 }
