--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,6 @@
 .header {
     width: 100%;
     height: 50px;
-    display: flex;
     align-items: center;
     padding: 0;
 }
@@ -24,10 +23,8 @@
     padding: 10px;
     border-radius: 15px;
 
-    z-index: 2;
-    position: absolute;
-    margin-left: auto;
+    position: fixed;
     right: 1%;
     top: 1%;
-    font-size: calc(200% - 10px);
+    font-size: calc(200% - 11px);
 }
